# twomes-opentherm-monitor-firmware

./: CMakeLists.txt  LICENSE  Makefile  README.md  platformio.ini  sdkconfig  sdkconfig.esp32dev  sdkconfig.old
FAQ/: opentherm-3-of-meer-aders.html  opentherm-wifi-reset.html
components/generic_esp_32/: CMakeLists.txt
lib/generic_esp_32/: generic_esp_32.c  generic_esp_32.h
lib/opentherm/: opentherm.cpp  opentherm.h
lib/presence_detection/: presence_detection.c
main/: main.cpp
manual/OpenTherm-Monitor/: index.html
src/: CMakeLists.txt  generic_esp_32.c  main.cpp
